# memedex-backend

./: .editorconfig  .gitignore  .tmuxinator.yml  Dockerfile  README.md  docker-compose.yml  jinja.py  jsconfig.json  manage.py  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json
config/: deploy.yml  init.sql
core/: admin.py  models.py  urls.py  views.py
core/migrations/: 0002_vnode_attachment.py  0003_vnode_owner_alter_vnode_attachment.py
core/static/memedex/components/: gallery-card.js
core/static/memedex/pages/: gallery-page.js  signin-page.js  upload-page.js
core/templates/example/: sample.html  signin.jinja
core/templates/memedex/: gallery.jinja  upload.jinja
memedex/: asgi.py  settings.py  wsgi.py
memedex/settings/: base.py  production.py
memedex/static/prelude/components/: aspect-ratio.js  navigation-menu.js
memedex/static/prelude/layouts/: default-layout.js
memedex/static/prelude/stores/: authentication-store.js
memedex_theme/static_src/: package-lock.json  package.json  tailwind.config.js
memedex_theme/templates/memedex_theme/: base.jinja
